WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19978
GTK port always ends up with # at the end of resource URLs (and hence can't load files)
https://bugs.webkit.org/show_bug.cgi?id=19978
Summary
GTK port always ends up with # at the end of resource URLs (and hence can't l...
Jacob Refstrup
Reported
2008-07-10 14:21:31 PDT
r35040
changed KURL.cpp in setRef() (line 708) testing for isNull() rather than isEmpty() caused a problem on GTK where called setRef("") which ends up being not being null (but would have been empty). This currently causes all file:// references to have added a '#' at the end of the URL -- which means file:// URLs won't load.
Attachments
KURL::clearRef added and used to fix situation
(2.14 KB, patch)
2008-07-10 14:22 PDT
,
Jacob Refstrup
no flags
Details
Formatted Diff
Diff
KURL::clearRef added and used to fix situation
(2.14 KB, patch)
2008-07-10 14:27 PDT
,
Jacob Refstrup
darin
: review+
Details
Formatted Diff
Diff
Final patch.
(2.16 KB, patch)
2008-07-10 16:30 PDT
,
Jacob Refstrup
no flags
Details
Formatted Diff
Diff
Final patch (fixed against TOT)
(1.68 KB, patch)
2008-07-10 21:56 PDT
,
Jacob Refstrup
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Jacob Refstrup
Comment 1
2008-07-10 14:22:24 PDT
Created
attachment 22205
[details]
KURL::clearRef added and used to fix situation Per Darin's suggestion added a clearRef() to KURL and called this from WebCore/platform/network/curl/ResourceHandleManager.cpp:558.
Jacob Refstrup
Comment 2
2008-07-10 14:27:15 PDT
Created
attachment 22206
[details]
KURL::clearRef added and used to fix situation Per Darin's suggestion added a clearRef() to KURL and called this from WebCore/platform/network/curl/ResourceHandleManager.cpp:558. (this time with a request for a review)
Darin Adler
Comment 3
2008-07-10 15:45:06 PDT
Comment on
attachment 22206
[details]
KURL::clearRef added and used to fix situation The ChangeLog has tab characters in it. That will make it impossible to check in as is. Otherwise, this looks good. We should take a look at other callers of setRef and see if any should be changed to use this new function. Perhaps the function should be called removeRef instead of clearRef. I think this patch is good enough as-is that I will say r=me
Jacob Refstrup
Comment 4
2008-07-10 16:30:56 PDT
Created
attachment 22229
[details]
Final patch. Renamed to removeRef(); removed tabs. Will need to follow up on AccessibilityRenderObject.cpp seperately.
Mark Rowe (bdash)
Comment 5
2008-07-10 16:32:44 PDT
***
Bug 19993
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 6
2008-07-10 21:16:53 PDT
Can you please refresh the patch against TOT. A change in <
http://trac.webkit.org/changeset/35111
> added a removeRef method to KURL to address a similar issue inside AccessibilityRenderObject.
Jacob Refstrup
Comment 7
2008-07-10 21:56:28 PDT
Created
attachment 22243
[details]
Final patch (fixed against TOT) Patched fixed against merge conflict caused by another person adding removeRef(); resolved duplicate and chose to use more streamlined version of removeRef().
Jacob Refstrup
Comment 8
2008-07-10 21:57:30 PDT
Fixed against TOT.
Darin Adler
Comment 9
2008-07-10 22:15:54 PDT
Comment on
attachment 22243
[details]
Final patch (fixed against TOT) r=me
Jacob Refstrup
Comment 10
2008-07-11 14:28:18 PDT
Updated severity to "blocker" as gtk depends on this fix.
Jan Alonzo
Comment 11
2008-07-11 15:31:00 PDT
Thanks for the patch (and Darin for the review). Landed in
r35137
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug