2008-07-11  Jacob Refstrup  <jacob.refstrup@hp.com>

Reviewed by Darin Adler

        http://bugs.webkit.org/show_bug.cgi?id=19978
        GTK port always ends up with # at the end of resource URLs (and hence can't load files)

        - Optimized KURL::removeRef() and used it rather than setRef("")
          which after r35040 does the wrong thing.

        * platform/KURL.cpp:
        (WebCore::KURL::removeRef):
        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::ResourceHandleManager::initializeHandle):

Canonical link: https://commits.webkit.org/27569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35137 268f45cc-cd09-0410-ab3c-d52691b4dbfc