WebCore/platform/network/curl/ResourceHandleManager.cpp
@@ -555,7 +555,7 @@ void ResourceHandleManager::initializeHandle(ResourceHandle* job)
     KURL kurl = job->request().url();
 
     // Remove any fragment part, otherwise curl will send it as part of the request.
-    kurl.setRef("");
+    kurl.removeRef();
 
     ResourceHandleInternal* d = job->getInternal();
     String url = kurl.string();
